tests/_resources/error_gcns/V002_control_variable_not_found.gcn
# Test file for ControlVariableNotFoundException
# Control variable K[] is declared but not used in any equations

block HOUSEHOLD {
    controls {
        K[];
    };

    objective {
        U[] = C[];
    };
};
